social meta data

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chevron Panel Knit Baby Blanket</title>
+    <title>Knitting Pattern Color Tester—Chevron Panel Knit Baby Blanket</title>
+
+    <meta property="og:title" content="Knitting Pattern Color Tester—Chevron Panel Knit Baby Blanket" />
+    <meta property="og:description" content="A React App to help choose yarn colors for a Baby Blanket knitting project!" />
+    <meta property="og:image" content="https://projects.aaronweidele.com/blanket-pattern/screencapture.png" />
+    <meta property="og:url" content="https://projects.aaronweidele.com/blanket-pattern/" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Knitting Pattern Color Tester—Chevron Panel Knit Baby Blanket" />
+    <meta name="twitter:description" content="A React App to help choose yarn colors for a Baby Blanket knitting project!" />
+    <meta name="twitter:image" content="https://projects.aaronweidele.com/blanket-pattern/screencapture.png" />
   </head>
   <body class="bg-zinc-700">
     <div id="root"></div>
